--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:build": "tsc",
-    "start:run": "nodemon dist/mediator/index.js",
+    "start:run": "nodemon dist/proxy-pattern/index.js",
     "start": "concurrently npm:start:*"
   },
   "author": "",
